--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -6,16 +6,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TÉ SALON BY TES</title>
   <style>
-    body {
-      color: pink;
-    }
+    body {}
   </style>
 </head>
 <body>
-  PRICELIST
+MANIKIRA
+
+KLASIČNA MANIKIRA....15€
+Ženska ali moška naravna manikira vsebuje oblikovanje in urejanje nohtov, urejanje obnohtne kožice, nego s hranilnim oljem in vlažilno kremo ter kratko, sproščujočo masažo rok.
+
+PERMANENTNO LAKIRANJE
+
+PERMANENTNO LAKIRANJE.................................................25€
+KOREKTURA PERM. LAKIRANJA (2-4 t.).........................28€
+KOREKTURA PERM. LAKIRANJA (nad 4 t.).....................30€
+
+ODSTRANJEVANJE PERM. LAKIRANJA.............................10€
+ODSTRANJEVANJE IN NOV NANOS..................................+5€
+POPRAVILO NOHTA................................................................+2,5€
+POPRAVILO POŠKODOVANEGA NOHTA.....................+3,5€
+
+GELIRANJE IN PODALJŠEVANJE
+
+PODALJŠEVANJE NOHTOV SALONSKIH OBLIK
+DOLŽINA S.......................................................................................35€
+KOREKTURA (2-4 t.)..................................................................30€
+KOREKTURA (nad 4 t.)..............................................................33€
+
+PODALJŠEVANJE NOHTOV SALONSKIH OBLIK
+DOLŽINA M.....................................................................................38€
+KOREKTURA (2-4 t.)..................................................................33€
+KOREKTURA (nad 4 t.)..............................................................36€
+
+PODALJŠEVANJE NOHTOV
+EKSTREMNIH OBLIK ALI DOLŽIN
+DOLŽINA L/XL...............................................................................45€
+KOREKTURA (2-4 t.)..................................................................38€
+KOREKTURA (nad 4 t.)..............................................................43€
+
+GELIRANJE NARAVNIH NOHTOV
+DOLŽINA S.......................................................................................30€
+DOLŽINA M.....................................................................................33€
+DOLŽINA L/XL...............................................................................38€
+
+ODSTRANJEVANJE GELIRANIH NOHTOV......................15€
+ODSTRANJEVANJE IN NOVO GELIRANJE......................+5€
+ODSTRANJEVANJE IN NOVO PODALJŠEVANJE...........+5€
+POPRAVILO NOHTA................................................................+3,5€
+POPRAVILO POŠKODOVANEGA NOHTA.....................+4,5€
+
+DODATKI
+
+GRAJENA FRANCOSKA....................1 noht/+2,5€ - vsi/+10€
+GRAJENE BLEŠČICE..........................1 noht/+2,5€ - vsi/+10€
+
+ROČNE POSLIKAVE, FOLIJE IN DODATKI
+*PREPROSTO..............................1 noht/+0,50€-1€ -  vsi/5-8€
+**ZAHTEVBEJŠE.............................1 noht/+1,5-2€ - vsi/8-10€
+                               *marble, enobarvne vijugice, folije, itd.
+                                  **plamenčki, večbarvne vijugice, itd.
+
+KRISTALČKI, OKRASKI.........................0,25€ - 0,50€ - 0,75€
+SWAROVSKI SS3-SS5.....................................1 kos/+0,25-0,50€
+SWAROVSKI SS8-SS12............................................1 kos/0,75-1€
+SWAROVSKI SS16+.................................................1 kos/1,5€-3€
+
+
+OBRVI
+
+LAMINACIJA....................................................................................45€
+OBLIKOVANJE Z VOSKOM IN PINCETO.........................18€
   
   <script>
-    console.log('hi');
   </script>
 </body>
 </html>
