--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -10,72 +10,70 @@
   </style>
 </head>
 <body>
-MANIKIRA
+  <h1>MANIKIRA</h1>
 
-KLASIČNA MANIKIRA....15€
-Ženska ali moška naravna manikira vsebuje oblikovanje in urejanje nohtov, urejanje obnohtne kožice, nego s hranilnim oljem in vlažilno kremo ter kratko, sproščujočo masažo rok.
+  <p>KLASIČNA MANIKIRA....15€</p>
+  <p>Ženska ali moška naravna manikira vsebuje oblikovanje in urejanje nohtov, urejanje obnohtne kožice, nego s hranilnim oljem in vlažilno kremo ter kratko, sproščujočo masažo rok.</p>
 
-PERMANENTNO LAKIRANJE
+  <h1>PERMANENTNO LAKIRANJ</h1>
 
-PERMANENTNO LAKIRANJE.................................................25€
-KOREKTURA PERM. LAKIRANJA (2-4 t.).........................28€
-KOREKTURA PERM. LAKIRANJA (nad 4 t.).....................30€
+  <p>PERMANENTNO LAKIRANJE.................................................25€</p>
+  <p>KOREKTURA PERM. LAKIRANJA (2-4 t.).........................28€</p>
+  <p>KOREKTURA PERM. LAKIRANJA (nad 4 t.).....................30€</p>
 
-ODSTRANJEVANJE PERM. LAKIRANJA.............................10€
-ODSTRANJEVANJE IN NOV NANOS..................................+5€
-POPRAVILO NOHTA................................................................+2,5€
-POPRAVILO POŠKODOVANEGA NOHTA.....................+3,5€
+  <p>ODSTRANJEVANJE PERM. LAKIRANJA.............................10€</p>
+  <p>ODSTRANJEVANJE IN NOV NANOS..................................+5€</p>
+  <p>POPRAVILO NOHTA................................................................+2,5€</p>
+  <p>POPRAVILO POŠKODOVANEGA NOHTA.....................+3,5€</p>
 
-GELIRANJE IN PODALJŠEVANJE
+  <h1>GELIRANJE IN PODALJŠEVANJ</h1>
 
-PODALJŠEVANJE NOHTOV SALONSKIH OBLIK
-DOLŽINA S.......................................................................................35€
-KOREKTURA (2-4 t.)..................................................................30€
-KOREKTURA (nad 4 t.)..............................................................33€
+  <p>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK</p>
+  <p>DOLŽINA S.......................................................................................35€</p>
+  <p>KOREKTURA (2-4 t.)..................................................................30€</p>
+  <p>KOREKTURA (nad 4 t.)..............................................................33€</p>
 
-PODALJŠEVANJE NOHTOV SALONSKIH OBLIK
-DOLŽINA M.....................................................................................38€
-KOREKTURA (2-4 t.)..................................................................33€
-KOREKTURA (nad 4 t.)..............................................................36€
+  <p>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK</p>
+  <p>DOLŽINA M.....................................................................................38€</p>
+  <p>KOREKTURA (2-4 t.)..................................................................33€</p>
+  <p>KOREKTURA (nad 4 t.)..............................................................36€</p>
 
-PODALJŠEVANJE NOHTOV
-EKSTREMNIH OBLIK ALI DOLŽIN
-DOLŽINA L/XL...............................................................................45€
-KOREKTURA (2-4 t.)..................................................................38€
-KOREKTURA (nad 4 t.)..............................................................43€
+  <p>PODALJŠEVANJE NOHTOV</p>
+  <p>EKSTREMNIH OBLIK ALI DOLŽIN</p>
+  <p>DOLŽINA L/XL...............................................................................45€</p>
+  <p>KOREKTURA (2-4 t.)..................................................................38€</p>
+  <p>KOREKTURA (nad 4 t.)..............................................................43€</p>
 
-GELIRANJE NARAVNIH NOHTOV
-DOLŽINA S.......................................................................................30€
-DOLŽINA M.....................................................................................33€
-DOLŽINA L/XL...............................................................................38€
+  <p>GELIRANJE NARAVNIH NOHTOV</p>
+  <p>DOLŽINA S.......................................................................................30€</p>
+  <p>DOLŽINA M.....................................................................................33€</p>
+  <p>DOLŽINA L/XL...............................................................................38€</p>
 
-ODSTRANJEVANJE GELIRANIH NOHTOV......................15€
-ODSTRANJEVANJE IN NOVO GELIRANJE......................+5€
-ODSTRANJEVANJE IN NOVO PODALJŠEVANJE...........+5€
-POPRAVILO NOHTA................................................................+3,5€
-POPRAVILO POŠKODOVANEGA NOHTA.....................+4,5€
+  <p>ODSTRANJEVANJE GELIRANIH NOHTOV......................15€</p>
+  <p>ODSTRANJEVANJE IN NOVO GELIRANJE......................+5€</p>
+  <p>ODSTRANJEVANJE IN NOVO PODALJŠEVANJE...........+5€</p>
+  <p>POPRAVILO NOHTA................................................................+3,5€</p>
+  <p>POPRAVILO POŠKODOVANEGA NOHTA.....................+4,5€</p>
 
-DODATKI
+  <h1>DODATKI</h1>
+  <p>GRAJENA FRANCOSKA....................1 noht/+2,5€ - vsi/+10€</p>
+  <p>GRAJENE BLEŠČICE..........................1 noht/+2,5€ - vsi/+10€</p>
 
-GRAJENA FRANCOSKA....................1 noht/+2,5€ - vsi/+10€
-GRAJENE BLEŠČICE..........................1 noht/+2,5€ - vsi/+10€
+  <p>ROČNE POSLIKAVE, FOLIJE IN DODATKI</p>
+  <p>*PREPROSTO..............................1 noht/+0,50€-1€ -  vsi/5-8€</p>
+  <p>**ZAHTEVBEJŠE.............................1 noht/+1,5-2€ - vsi/8-10€</p>
+  <p>                               *marble, enobarvne vijugice, folije, itd.</p>
+  <p>                                  **plamenčki, večbarvne vijugice, itd.</p>
 
-ROČNE POSLIKAVE, FOLIJE IN DODATKI
-*PREPROSTO..............................1 noht/+0,50€-1€ -  vsi/5-8€
-**ZAHTEVBEJŠE.............................1 noht/+1,5-2€ - vsi/8-10€
-                               *marble, enobarvne vijugice, folije, itd.
-                                  **plamenčki, večbarvne vijugice, itd.
-
-KRISTALČKI, OKRASKI.........................0,25€ - 0,50€ - 0,75€
-SWAROVSKI SS3-SS5.....................................1 kos/+0,25-0,50€
-SWAROVSKI SS8-SS12............................................1 kos/0,75-1€
-SWAROVSKI SS16+.................................................1 kos/1,5€-3€
+  <p>KRISTALČKI, OKRASKI.........................0,25€ - 0,50€ - 0,75€</p>
+  <p>SWAROVSKI SS3-SS5.....................................1 kos/+0,25-0,50€</p>
+  <p>SWAROVSKI SS8-SS12............................................1 kos/0,75-1€</p>
+  <p>SWAROVSKI SS16+.................................................1 kos/1,5€-3€</p>
 
 
-OBRVI
-
-LAMINACIJA....................................................................................45€
-OBLIKOVANJE Z VOSKOM IN PINCETO.........................18€
+  <h1>OBRVI</h1>
+  <p>LAMINACIJA....................................................................................45€</p>
+  <p>OBLIKOVANJE Z VOSKOM IN PINCETO.........................18€</p>
   
   <script>
   </script>
