--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -50,8 +50,22 @@
         padding-bottom: 27px;
       }
 
+      p.bottom-space {
+        padding-bottom: 8px;
+      }
+
       .text-justify {
         text-align: justify;
+      }
+
+      .no-top-space {
+        padding-top: 0;
+        margin-top: 0;
+      }
+
+      .no-bottom-space {
+        padding-bottom: 0;
+        margin-bottom: 0;
       }
     </style>
   </head>
@@ -62,27 +76,26 @@
       <ul class="leaders bottom-space">
         <li class="dots"><span>KLASIČNA MANIKIRA</span> <span>15€</span></li>
       </ul>
-
       <p class="text-justify">
         ženska ali moška naravna manikira vsebuje oblikovanje in urejanje nohtov, urejanje obnohtne kožice, nego s
         hranilnim oljem in vlažilno kremo ter kratko, sproščujočo masažo rok
       </p>
 
       <h1>PERMANENTNO LAKIRANJE</h1>
-
       <ul class="leaders bottom-space">
         <li class="dots"><span>PERMANENTNO LAKIRANJE</span> <span>25€</span></li>
         <li class="dots"><span>KOREKTURA PERM LAKIRANJA (2-4 t)</span> <span>28€</span></li>
         <li class="dots"><span>KOREKTURA PERM LAKIRANJA (nad 4 t)</span> <span>30€</span></li>
       </ul>
-
       <ul class="leaders bottom-space">
         <li class="dots"><span>ODSTRANJEVANJE PERM LAKIRANJA</span> <span>10€</span></li>
         <li class="dots"><span>ODSTRANJEVANJE IN NOV NANOS</span> <span>+5€</span></li>
         <li class="dots"><span>POPRAVILO NOHTA</span> <span>+2,5€</span></li>
         <li class="dots"><span>POPRAVILO POŠKODOVANEGA NOHTA</span> <span>+3,5€</span></li>
       </ul>
+
       <h1>GELIRANJE IN PODALJŠEVANJE</h1>
+      <!-- 
       <ul class="leaders bottom-space">
         <li><span>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (OVAL/MANDELJ/KOCKA)</span></li>
         <li class="dots"><span>DOLŽINA S</span> <span>35€</span></li>
@@ -94,9 +107,16 @@
         <li class="dots"><span>DOLŽINA M</span> <span>38€</span></li>
         <li class="dots"><span>KOREKTURA (2-4 t)</span> <span>33€</span></li>
         <li class="dots"><span>KOREKTURA (nad 4 t)</span> <span>36€</span></li>
+      </ul> 
+      -->
+      <ul class="leaders bottom-space">
+        <li><span>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (OVAL/MANDELJ/KOCKA)</span></li>
+        <li class="dots"><span>DOLŽINA S/M</span> <span>(S) 35€ (M) 38€</span></li>
+        <li class="dots"><span>KOREKTURA (2-4 t)</span> <span>(S) 30€ (M) 33€</span></li>
+        <li class="dots"><span>KOREKTURA (nad 4 t)</span> <span>(S) 33€ (M) 36€</span></li>
       </ul>
       <ul class="leaders bottom-space">
-        <li class="dots"><span>PODALJŠEVANJE NOHTOV EKSTREMNIH OBLIK ALI DOLŽIN (STILETTO/COFFIN)</span></li>
+        <li><span>PODALJŠEVANJE NOHTOV EKSTREMNIH OBLIK ALI DOLŽIN (STILETTO/COFFIN)</span></li>
         <li class="dots"><span>DOLŽINA L/XL</span> <span>(L) 45€ (XL) 48€</span></li>
         <li class="dots"><span>KOREKTURA (2-4 t)</span> <span>(L) 38€ (XL) 41€</span></li>
         <li class="dots"><span>KOREKTURA (nad 4 t)</span> <span>(L) 43€ (XL) 46€</span></li>
@@ -114,40 +134,48 @@
         <li class="dots"><span>POPRAVILO NOHTA</span> <span>+3,5€</span></li>
         <li class="dots"><span>POPRAVILO POŠKODOVANEGA NOHTA</span> <span>+4,5€</span></li>
       </ul>
-      <h1>DODATKI</h1>
+
+      <h1>POSLIKAVE IN DODATKI</h1>
       <ul class="leaders bottom-space">
         <li class="dots"><span>GRAJENA FRANCOSKA</span> <span>1 noht/+2,5€ - vsi/+10€</span></li>
         <li class="dots"><span>GRAJENE BLEŠČICE</span> <span>1 noht/+2,5€ - vsi/+10€</span></li>
       </ul>
-      <ul class="leaders bottom-space">
-        <li class="dots"><span>ROČNE POSLIKAVE, FOLIJE IN DODATKI</span></li>
+      <ul class="leaders">
+        <li><span>ROČNE POSLIKAVE, FOLIJE IN DODATKI</span></li>
         <li class="dots"><span>*PREPROSTO</span> <span>1 noht/+0,50€-1€ - vsi/5-8€</span></li>
         <li class="dots"><span>**ZAHTEVNEJŠE</span> <span>1 noht/+1,5-2€ - vsi/8-10€</span></li>
-        <li class="dots"><span></span> <span>*marble, enobarvne vijugice, folije, itd</span></li>
-        <li class="dots"><span></span> <span>**plamenčki, večbarvne vijugice, itd</span></li>
       </ul>
+      <p class="bottom-space">
+        *marble, enobarvne vijugice, folije, itd.<br />
+        **plamenčki, večbarvne vijugice, itd.
+      </p>
       <ul class="leaders bottom-space">
         <li class="dots"><span>KRISTALČKI, OKRASKI</span> <span>0,25€ - 0,50€ - 0,75€</span></li>
         <li class="dots"><span>SWAROVSKI SS3-SS5</span> <span>1 kos/+0,25-0,50€</span></li>
         <li class="dots"><span>SWAROVSKI SS8-SS12</span> <span>1 kos/0,75-1€</span></li>
         <li class="dots"><span>SWAROVSKI SS16+</span> <span>1 kos/1,5€-3€</span></li>
       </ul>
+
       <h1>OBRVI</h1>
       <ul class="leaders bottom-space">
         <li class="dots"><span>LAMINACIJA</span> <span>45€</span></li>
         <li class="dots"><span>OBLIKOVANJE Z VOSKOM IN PINCETO</span> <span>15-18€</span></li>
       </ul>
 
-      <h1>DARILNI BONI</h1>
+      <h1>DARILNI BONI</h1>›
       <ul class="leaders bottom-space">
         <li class="dots"><span>V VREDNOSTI</span> <span>15€</span></li>
         <li class="dots"><span></span> <span>20€</span></li>
         <li class="dots"><span></span> <span>25€</span></li>
       </ul>
       <p>
-        zamenjava bona ni možna. možno je le doplačilo in izbria druge storitve v drugi vrednosti. darilni bon je
-        veljaven 6 mesecev od nakupa.
+        zamenjava bona za denar ni možna. možno je le doplačilo in izbria druge storitve v drugi vrednosti. darilni bon
+        je veljaven 6 mesecev od nakupa.
       </p>
+      <br />
+
+      <p class="no-bottom-space">plačilo je možno le z gotovino.</p>
+      <p class="no-top-space">pridržujem si pravico do spremembe cenika. cenik velja od 1.10.2021</p>
     </div>
     <script></script>
   </body>
