Separate S and M lengths

--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -95,7 +95,6 @@
       </ul>
 
       <h1>GELIRANJE IN PODALJŠEVANJE</h1>
-      <!-- 
       <ul class="leaders bottom-space">
         <li><span>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (OVAL/MANDELJ/KOCKA)</span></li>
         <li class="dots"><span>DOLŽINA S</span> <span>35€</span></li>
@@ -107,13 +106,6 @@
         <li class="dots"><span>DOLŽINA M</span> <span>38€</span></li>
         <li class="dots"><span>KOREKTURA (2-4 t)</span> <span>33€</span></li>
         <li class="dots"><span>KOREKTURA (nad 4 t)</span> <span>36€</span></li>
-      </ul> 
-      -->
-      <ul class="leaders bottom-space">
-        <li><span>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (OVAL/MANDELJ/KOCKA)</span></li>
-        <li class="dots"><span>DOLŽINA S/M</span> <span>(S) 35€ (M) 38€</span></li>
-        <li class="dots"><span>KOREKTURA (2-4 t)</span> <span>(S) 30€ (M) 33€</span></li>
-        <li class="dots"><span>KOREKTURA (nad 4 t)</span> <span>(S) 33€ (M) 36€</span></li>
       </ul>
       <ul class="leaders bottom-space">
         <li><span>PODALJŠEVANJE NOHTOV EKSTREMNIH OBLIK ALI DOLŽIN (STILETTO/COFFIN)</span></li>
@@ -162,7 +154,8 @@
         <li class="dots"><span>OBLIKOVANJE Z VOSKOM IN PINCETO</span> <span>15-18€</span></li>
       </ul>
 
-      <h1>DARILNI BONI</h1>›
+      <h1>DARILNI BONI</h1>
+      ›
       <ul class="leaders bottom-space">
         <li class="dots"><span>V VREDNOSTI</span> <span>15€</span></li>
         <li class="dots"><span></span> <span>20€</span></li>
