--- a/familydiscount/index.html
+++ b/familydiscount/index.html
@@ -187,7 +187,7 @@
       <br />
 
       <div class="text-right">
-        <img src="images/familydiscount.png" alt="Hey you! Don't forget about your -10% family discount!" />
+        <img src="../images/familydiscount.png" alt="Hey you! Don't forget about your -10% family discount!" />
       </div>
 
       <p class="text-justify no-bottom-space">plačilo je možno le z gotovino.</p>
