--- a/familydiscount/index.html
+++ b/familydiscount/index.html
@@ -71,6 +71,16 @@
         padding-bottom: 0;
         margin-bottom: 0;
       }
+
+      .negative-bottom-space {
+        margin-bottom: -8px;
+      }
+
+      .discount-image {
+        padding-right: 27px;
+        padding-bottom: 9px;
+        width: 209px;
+      }
     </style>
   </head>
   <body>
@@ -180,18 +190,25 @@
         <li class="dots"><span class="name"></span> <span class="price">20€</span></li>
         <li class="dots"><span class="name"></span> <span class="price">25€</span></li>
       </ul>
-      <p class="text-justify">
+      <p class="text-justify negative-bottom-space">
         zamenjava bona za denar ni možna. možno je le doplačilo in izbria druge storitve v drugi vrednosti. darilni bon
         je veljaven 6 mesecev od nakupa.
       </p>
       <br />
 
       <div class="text-right">
-        <img src="../images/familydiscount.png" alt="Hey you! Don't forget about your -10% family discount!" />
+        <img
+          class="discount-image"
+          src="../images/familydiscount.png"
+          alt="Hey you! Don't forget about your -10% family discount!"
+        />
       </div>
 
-      <p class="text-justify no-bottom-space">plačilo je možno le z gotovino.</p>
-      <p class="text-justify no-top-space">pridržujem si pravico do spremembe cenika. cenik velja od 10.10.2021</p>
+      <p class="text-justify no-top-space no-bottom-space">
+        <small
+          >plačilo je možno le z gotovino. pridržujem si pravico do spremembe cenika. cenik velja od 10.10.2021</small
+        >
+      </p>
     </div>
     <script></script>
   </body>
