--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -50,6 +50,10 @@
         text-align: justify;
       }
 
+      .text-right {
+        text-align: right;
+      }
+
       .bottom-space {
         padding-bottom: 27px;
       }
@@ -66,6 +70,16 @@
       .no-bottom-space {
         padding-bottom: 0;
         margin-bottom: 0;
+      }
+
+      .negative-bottom-space {
+        margin-bottom: -8px;
+      }
+
+      .discount-image {
+        padding-right: 27px;
+        padding-bottom: 9px;
+        width: 209px;
       }
     </style>
   </head>
@@ -149,7 +163,7 @@
           <span class="name">**ZAHTEVNEJŠE</span> <span class="price">1 noht/+1,5-2€ - vsi/8-10€</span>
         </li>
       </ul>
-      <p class="text-justify bottom-space">
+      <p class="text-right bottom-space">
         *marble, enobarvne vijugice, folije, itd.<br />
         **plamenčki, večbarvne vijugice, itd.
       </p>
