--- a/familydiscount/index.html
+++ b/familydiscount/index.html
@@ -163,7 +163,7 @@
           <span class="name">**ZAHTEVNEJŠE</span> <span class="price">1 noht/+1,5-2€ - vsi/8-10€</span>
         </li>
       </ul>
-      <p class="text-justify bottom-space">
+      <p class="text-right bottom-space">
         *marble, enobarvne vijugice, folije, itd.<br />
         **plamenčki, večbarvne vijugice, itd.
       </p>
