--- a/familydiscount/index.html
+++ b/familydiscount/index.html
@@ -112,19 +112,19 @@
 
       <h1>GELIRANJE IN PODALJŠEVANJE</h1>
       <ul class="leaders bottom-space">
-        <li><span>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (OVAL/MANDELJ/KOCKA)</span></li>
+        <li><span>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (KOCKA/OVAL)</span></li>
         <li class="dots"><span class="name">DOLŽINA S</span> <span class="price">35€</span></li>
         <li class="dots"><span class="name">KOREKTURA (2-4 t)</span> <span class="price">30€</span></li>
         <li class="dots"><span class="name">KOREKTURA (nad 4 t)</span> <span class="price">33€</span></li>
       </ul>
       <ul class="leaders bottom-space">
-        <li>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (OVAL/MANDELJ/KOCKA)</li>
+        <li>PODALJŠEVANJE NOHTOV SALONSKIH OBLIK (KOCKA/OVAL/MANDELJ/BALLERINA)</li>
         <li class="dots"><span class="name">DOLŽINA M</span> <span class="price">40€</span></li>
         <li class="dots"><span class="name">KOREKTURA (2-4 t)</span> <span class="price">35€</span></li>
         <li class="dots"><span class="name">KOREKTURA (nad 4 t)</span> <span class="price">38€</span></li>
       </ul>
       <ul class="leaders bottom-space">
-        <li><span>PODALJŠEVANJE NOHTOV EKSTREMNIH OBLIK ALI DOLŽIN (STILETTO/COFFIN)</span></li>
+        <li><span>PODALJŠEVANJE NOHTOV EKSTREMNIH OBLIK ALI DOLŽIN (KOCKA/STILETTO/BALLERINA)</span></li>
         <li class="dots"><span class="name">DOLŽINA L/XL</span> <span class="price">(L) 45€ (XL) 50€</span></li>
         <li class="dots"><span class="name">KOREKTURA (2-4 t)</span> <span class="price">(L) 40€ (XL) 45€</span></li>
         <li class="dots"><span class="name">KOREKTURA (nad 4 t)</span> <span class="price">(L) 43€ (XL) 48€</span></li>
