--- a/familydiscount/index.html
+++ b/familydiscount/index.html
@@ -180,7 +180,13 @@
       <ul class="leaders bottom-space">
         <li class="dots"><span class="name">LAMINACIJA</span> <span class="price">45€</span></li>
         <li class="dots">
-          <span class="name">OBLIKOVANJE Z VOSKOM IN PINCETO</span> <span class="price">15-18€</span>
+          <span class="name">OBLIKOVANJE Z VOSKOM IN PINCETO - MINI</span> <span class="price">10€</span>
+        </li>
+         <li class="dots">
+          <span class="name">OBLIKOVANJE Z VOSKOM IN PINCETO - MAXI</span> <span class="price">15€</span>
+        </li>
+         <li class="dots">
+          <span class="name">OBLIKOVANJE IN BARVANJE</span> <span class="price">20€</span>
         </li>
       </ul>
 
