--- a/familydiscount/index.html
+++ b/familydiscount/index.html
@@ -178,15 +178,15 @@
 
       <h1>OBRVI</h1>
       <ul class="leaders bottom-space">
-        <li class="dots"><span class="name">LAMINACIJA</span> <span class="price">45€</span></li>
+        <li class="dots"><span class="name">OBLIKOVANJE Z VOSKOM IN PINCETO MINI</span> <span class="price">10€</span></li>
         <li class="dots">
-          <span class="name">OBLIKOVANJE Z VOSKOM IN PINCETO - MINI</span> <span class="price">10€</span>
-        </li>
-         <li class="dots">
-          <span class="name">OBLIKOVANJE Z VOSKOM IN PINCETO - MAXI</span> <span class="price">15€</span>
+          <span class="name">OBLIKOVANJE Z VOSKOM IN PINCETO MAXI</span> <span class="price">15€</span>
         </li>
          <li class="dots">
           <span class="name">OBLIKOVANJE IN BARVANJE</span> <span class="price">20€</span>
+        </li>
+         <li class="dots">
+          <span class="name">LAMINACIJA OBRVI</span> <span class="price">45€</span>
         </li>
       </ul>
 
