--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -192,15 +192,17 @@
     
        <h1>IZDELKI ZA NEGO</h1>
       <ul class="leaders bottom-space">
-        <li class="dots"><span class="name">LILLY NAILS KREMA ZA ROKE - STRAWBERRY (30ml) </span> <span class="price">9,60€</span></li>
+             <li><span>LILLY NAILS KREMA ZA ROKE</span></li>
+        <li class="dots"><span class="name">STRAWBERRY - 30ML) </span> <span class="price">9,60€</span></li>
         <li class="dots">
-          <span class="name">LILLY NAILS KREMA ZA ROKE LILLY FLOWER (30ml) </span> <span class="price">9,60€</span>
+          <span class="name">LILLY FLOWER - 30ML</span> <span class="price">9,60€</span>
+        </li>
+          <li><span>DIVINE NAILS OLJE ZA OBNOHTNO KOŽICO</span></li>
+         <li class="dots">
+          <span class="name">HUBBA BUBBA - 10ML </span> <span class="price">8,40€</span>
         </li>
          <li class="dots">
-          <span class="name">DIVINE NAILS OLJE ZA OBNOHTNO KOŽICO HUBBA BUBBA (10ml) </span> <span class="price">8,40€</span>
-        </li>
-         <li class="dots">
-          <span class="name">DIVINE NAILS OLJE ZA OBNOHTNO KOŽICO JUICY LEMON (10ml) </span> <span class="price">8,40€</span>
+          <span class="name">JUICY LEMON - 10ML</span> <span class="price">8,40€</span>
         </li>
       </ul>
       
