--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -195,8 +195,10 @@
              <li><span>LILLY NAILS KREMA ZA ROKE (30ML) </span></li>
         <li class="dots"><span class="name">STRAWBERRY</span> <span class="price">9,60€</span></li>
         <li class="dots">
-          <span class="name">LILLY FLOWER - 30ML</span> <span class="price">9,60€</span>
-        </li>
+          <span class="name">LILLY FLOWER</span> <span class="price">9,60€</span>
+          </li>
+           <li class="dots"><span class="name">BLOSSOM</span> <span class="price">PO NAROČILU - 10,60€</span></li>
+      
         
           <ul class="leaders bottom-space">
           <li><span>DIVINE NAILS OLJE ZA OBNOHTNO KOŽICO (10ML)</span></li>
